# 3D-Geometry

./: README.md
triangles_in_space/: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
triangles_in_space/include/: octree.hpp  triangles.hpp
triangles_in_space/src/: CMakeLists.txt  triangles.cpp
triangles_in_space/tests/: CMakeLists.txt  test.cpp
